updated padding on smaller screens

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 				<div class="play">
 					<a href="http://play.google.com/store/apps/details?id=com.thunsaker.rapido">
 		              <img alt="Get it on Google Play"
-		                   src="http://www.android.com/images/brand/get_it_on_play_logo_large.png" />
+		                   src="http://www.android.com/images/brand/get_it_on_play_logo_large.png"
+		                   width="172" />
 		            </a>
 		        </div>
 			</div>
@@ -48,7 +49,8 @@
 				<div class="play">
 					<a href="http://play.google.com/store/apps/details?id=com.thunsaker.soup">
 						<img alt="Get it on Google Play"
-						src="http://www.android.com/images/brand/get_it_on_play_logo_large.png" />
+							 src="http://www.android.com/images/brand/get_it_on_play_logo_large.png"
+							 width="172" />
 					</a>
 				</div>
 			</div>
@@ -67,7 +69,8 @@
 				<div class="play">
 					<a href="http://play.google.com/store/apps/details?id=com.thunsaker">
 		              <img alt="Get it on Google Play"
-		                   src="http://www.android.com/images/brand/get_it_on_play_logo_large.png" />
+		                   src="http://www.android.com/images/brand/get_it_on_play_logo_large.png"
+		                   width="172" />
 		            </a>
 		        </div>
 			</div>
